name:                stats-collector

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Collector for statistics regarding Pardus
description:         Extract statistics for the Artemis universe in
                     the game of Pardus. See README.md for more.

homepage:            https://github.com/mihaimaruseac/petulant-octo-avenger
license:             BSD3
license-file:        LICENSE
author:              Mihai Maruseac
maintainer:          mihai.maruseac@gmail.com
copyright:           No copyright infringement on Pardus intended.

category:            Game
build-type:          Simple

extra-source-files:
  README.md

cabal-version:       >=1.10

executable stats-collector
  default-language:  Haskell2010
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  hs-source-dirs:    src
  other-modules:
      Errors
    , Globals
    , IP
    , ProcessChain
    , TCP
    , Tag
    , Types
  build-depends:
    attoparsec >= 0.10,
    base >= 4.6,
    bytestring >= 0.10,
    conduit >= 1.2,
    conduit-combinators >= 0.3,
    containers >= 0.5,
    cereal >= 0.4,
    mtl >= 2.1,
    pcap >= 0.4,
    resourcet >= 1.1,
    tagsoup >= 0.13,
    transformers >= 0.3,
    zlib >= 0.5

executable drawer
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  main-is:           Main.hs
  hs-source-dirs:    src-draw
  other-modules:
      Args
    , Demos
    , TSSMess
    , TSSMess.Data
    , TSSMess.Types
    , Utils
    , WarActivity
    , Wars
    , Wars.Data
    , Wars.Types
  build-depends:
    base >= 4.6,
    colour >= 2.3,
    containers >= 0.5,
    data-default >= 0.5,
    diagrams >= 1.2,
    diagrams-lib >= 1.2,
    diagrams-rasterific >= 0.1,
    filepath >= 1.4,
    lens >= 4.7,
    optparse-applicative >= 0.11,
    palette >= 0.1,
    split >= 0.2,
    text >= 1.2,
    time >= 1.4
