name:                candy-simulator

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Simulator to find the proper amount of candy for max APs
description:         Simulator to determine a proper candy-taking strategy in
                     the game of Pardus. See README.md for more.

homepage:            https://github.com/mihaimaruseac/petulant-octo-avenger
license:             BSD3
license-file:        LICENSE
author:              Mihai Maruseac
maintainer:          mihai.maruseac@gmail.com
copyright:           No copyright infringement on Pardus intended.

category:            Game
build-type:          Simple

extra-source-files:
  README.md

cabal-version:       >=1.10

executable candy-simulator
  -- .hs or .lhs file containing the Main module.
  main-is:           simulator.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:       

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    

  -- Other library packages from which modules are imported.
  build-depends:
    base >=4.6 && <4.7,
    tf-random >=0.1 && <0.2

  -- Directories containing source files.
  -- hs-source-dirs:      

  -- Base language which the package is written in.
  default-language:    Haskell2010
