name:                stats-collector

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Collector for statistics regarding Pardus
description:         Extract statistics for the Artemis universe in
                     the game of Pardus. See README.md for more.

homepage:            https://github.com/mihaimaruseac/petulant-octo-avenger
license:             BSD3
license-file:        LICENSE
author:              Mihai Maruseac
maintainer:          mihai.maruseac@gmail.com
copyright:           No copyright infringement on Pardus intended.

category:            Game
build-type:          Simple

extra-source-files:
  README.md

cabal-version:       >=1.10

executable stats-collector
  -- .hs or .lhs file containing the Main module.
  main-is:           stats.hs
  ghc-options:      -Wall -O2

  -- Modules included in this executable, other than Main.
  -- other-modules:       

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  --  RecordWildCards

  -- Other library packages from which modules are imported.
  build-depends:
    attoparsec >= 0.10 && <0.11,
    base >= 4.6 && <4.7,
    cereal >= 0.4 && <0.5,
    bytestring >= 0.10 && <0.11,
    pcap >= 0.4 && <0.5,
    zlib >= 0.5 && <0.6

  -- Directories containing source files.
  -- hs-source-dirs:      

  -- Base language which the package is written in.
  default-language:    Haskell2010
